--- a/src/ui-components/DiscussionPost.css
+++ b/src/ui-components/DiscussionPost.css
@@ -7,11 +7,16 @@
     max-width: 100%;
     border-radius: 10px;
     border-style: solid;
-    border-color: grey;
+    border-color: black;
     border-width: thin;
     gap: 5px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+  }
+
+  .reply {
+    padding: 10px;
   }
   
   .post:hover {
@@ -25,9 +30,14 @@
   }
   
   .post p {
-    color: #666;
+    color: #000;
     font-size: 16px;
     overflow-wrap: anywhere;
+  }
+
+  .reply .author {
+    text-align: left;
+    color: #000;
   }
 
   .break {
@@ -37,9 +47,10 @@
   }
   
   .content {
+    align-self: stretch;
     text-align: left;
-    padding: 5px;
-    border-color: black;
+    padding: 10px;
+    border: thin solid black;
   }
 
   .meta {
@@ -49,7 +60,7 @@
   
   .author,
   .date {
-    color: #999;
+    color: #000;
     font-size: 14px;
     font-weight: 500;
   }
@@ -60,6 +71,10 @@
   
   .date {
     text-align: right;
+  }
+
+  .title {
+    padding: 10px;
   }
 
   
@@ -100,7 +115,6 @@
     color: #fff;
     border: none;
     border-radius: 5px;
-    padding: 8px 16px;
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
@@ -110,10 +124,7 @@
     background-color: #00ff33;
   }
 
-  .reply .author {
-    color: #000;
-    font-weight: bold;
-  }
+
   .replies h4 {
     gap: 4rem;
   }
